# sisyphus-control

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  dev_setup.sh  poetry.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.py
.github/workflows/: publish.yml  release.yml
sisyphus/control/: __init__.py  log.py  playlist.py  table.py  track.py  transport.py
sisyphus_control/: data.py  log.py  playlist.py  sisbot_json.py  table.py  track.py  transport.py  util.py
