[tool.isort]
profile = "black"

[tool.poetry]
name = "sisyphus_control"
version = "3.1.4"
description = "Control your Sisyphus kinetic art tables (sisyphus-industries.com)"
homepage = "https://github.com/jkeljo/sisyphus-control"
repository = "https://github.com/jkeljo/sisyphus-control"
license = "MIT"
readme = "README.rst"
authors = ["Jonathan Keljo"]
keywords = ["sisyphus"]
packages = [{include="sisyphus_control"}]
include = ["sisyphus_control/py.typed"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
netifaces = "^0.11.0"
python-engineio-v3 = "^3.14.2"
python-socketio-v4 = "^4.6.1"

[tool.poetry.group.test.dependencies]
ruff = "*"
pyright = "*"
pytest = "*"
pytest-socket = "*"

[tool.pyright]
include = ["sisyphus_control"]
pythonVersion = "3.8"
typeCheckingMode = "strict"
